2017-10-10 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/mcs51/gen.c:
	  Fix a bug in genRet() to avoid generate "mov Rx,Ry".
	* src/mcs51/peeph.def:
	  Better format.
	* support/regression/ports/mcs51-common/spec.mk:
	  Add support for liblonglong.
	* support/regression/tests/gcc-torture-execute-pr78378.c:
	  Enabled for mcs-51.

2017-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_divuchar.c,
	  device/lib/_moduchar.c,
	  device/lib/_muluchar.c,
	  src/SDCCsymt.c:
	  Generic support routine infrastructure.

2017-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2663.c:
	  Disable new function pointer test for ds390.
	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Improve error reporting for conflicting function declarations.
	* src/SDCCast.c,
	  support/regression,tests/bug-2556.c:
	  Fix bug #2556.

2017-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCglue.c:
	  Fix bug #2641.

2017-10-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/generic.c:
	  Fix string literal signedness to match char.
	* src/SDCCsymt.c,
	  support/regression/tests/bug-2663.c:
	  Partial fix for bug #2663.

2017-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Make source compilable with MSVC++ 2015.

2017-10-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix bug #2662 (omit debug info on dry run)

2017-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/cvu_play_music.c,
	  support/regression/tests/io.c:
	  Improve coverage of z80 peephole rules.
	* src/SDCCicode.c:
	  Improve debug info for ENDFUNCTION iCode, patch by Åke Rehnman.
	* src/z80/peeph-tlcs90.def:
	  Remove obsolete tlcs90 peephole rules.
	* src/z80/peeph-gbz80.def:
	  Remove obsolete gbz80 peephole rules.

2017-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr80501.c,