@@ -1,3 +1,8 @@
+2017-10-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp:
+	  Fix bug #2667.
+
 2017-10-10 Ben Shi <powerstudio1st AT 163 DOT com>
 	* src/mcs51/gen.c:
 	  Fix a bug in genRet() to avoid generate "mov Rx,Ry".
